--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+@import "header.css";
+
+
 /* Здесь вы напишете основную часть стилей страницы.
 
 Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
@@ -17,4 +20,11 @@
 .page {
   min-inline-size: 320px;
   min-block-size: 100dvb;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding-top: 100px;
+  gap: 100px;
 }
