--- a/styles/themes.css
+++ b/styles/themes.css
@@ -1,6 +1,2 @@
-/* В этом файле вы опишете значения переменных в разных цветовых схемах.
-Придерживайтесь такого именования классов:
-✦ theme-dark — класс тёмной темы
-✦ theme-light — класс светлой темы
-✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
-*/
+@import "themes/dark.css";
+@import "themes/light.css";
