--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,6 @@
 .header {
     padding: 25px 16px;
+    margin-bottom: 50px;
     position: relative;
     width: min(100%, var(--max-width));
     /* min-height: clamp(323px, 50vh,368px) */;
@@ -40,26 +41,71 @@
 }
 
 .theme-menu__list {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
 }
 
 .theme-menu__item {
-
-}
-
-.theme-menu__item {
-
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0;
 }
 
 .theme-menu__button {
+    position: relative;
+    margin: 0;
+    padding: 0;
     font: var(--font-start-s);
-    font: inherit;
     color: inherit;
     background-color: transparent;
     text-align: center;
     border: none;
     text-transform: uppercase;
+    transition: opacity 500ms;
 }
 
-.theme-menu__button:focus {
+.theme-menu__button::before {
+    content: '▶';
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
+    left: -20px;
+    color: var(--mainColor);
+}
+
+.theme-menu__button::after {
+    overflow: hidden;
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.1em;
+    background-color: var(--mainColor);
+    opacity: 0;
+    transition: opacity 500ms, transform 500ms;
+    transform: translate3d(-100%, 0, 0);
+}
+
+.theme-menu__button:focus,
+.theme-menu__button:active,
+.theme-menu__button:focus-within,
+.theme-menu__button:active,
+.theme-menu__button:hover,
+.theme-menu__button:focus::before,
+.theme-menu__button:active::before,
+.theme-menu__button:focus-within::before {
+    opacity: .5;
+}
+
+.theme-menu__button:hover::after {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+}
+
+.theme-menu__button:focus-within {
     outline: none;
 }
