--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@
 */
 
 .page {
+  position: relative;
   min-inline-size: 320px;
   min-block-size: 100dvb;
 
@@ -29,8 +30,26 @@
   align-items: center;
   padding-top: 100px;
   gap: 50px;
-
   background-color: var(--background);
+}
+
+.background {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 960px;
+  background-size: 4px;
+  background-repeat: repeat;
+}
+
+.theme_dark .background {
+  background-image: url("../svg/pattern-dark.svg");
+}
+
+.theme_light .background {
+  background-image: url("../svg/pattern-light.svg");
 }
 
 .main {
@@ -38,6 +57,6 @@
 }
 
 .button {
-  background: transparent;
+  background: var(--background);
   border: var(--border);
 }
