--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -7,7 +7,8 @@
 
 @font-face {
     font-family: "Inter";
-    src: url(./Inter-Variable.woff2) format('woff2');
+    src: url(./Inter-Variable.woff2) format('woff2-variations');
+    font-variation-settings: "wght" 400, "wght" 785;
     font-weight: normal;
     font-display: swap;
 }
