--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -8,7 +8,13 @@
 @font-face {
     font-family: "Inter";
     src: url(./Inter-Variable.woff2) format('woff2-variations');
-    font-variation-settings: "wght" 400, "wght" 785;
-    font-weight: normal;
+    font-weight: 400;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Inter";
+    src: url(./Inter-Variable.woff2) format('woff2 supports variations');
+    font-weight: 785;
     font-display: swap;
 }
