--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -7,14 +7,9 @@
 
 @font-face {
     font-family: "Inter";
-    src: url(./Inter-Variable.woff2) format('woff2-variations');
-    font-weight: 400;
+    src: url(./Inter-Variable.woff2) format('woff2 supports variations'),
+    url(./Inter-Variable.woff2) format('woff2-variations');
+    font-weight: 400 785;
     font-display: swap;
-}
-
-@font-face {
-    font-family: "Inter";
-    src: url(./Inter-Variable.woff2) format('woff2 supports variations');
-    font-weight: 785;
-    font-display: swap;
+    font-style: normal;
 }
