--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,9 +7,12 @@
     --light-main-color : #000;
     --light-bg-color : #fff;
 
+    /** like **/
+    --red : #FF0000;
+
     /** fonts **/
-    --font-press-start : "Press Start 2P";
-    --font-inter : "Inter";
+    --font-press-start : "Press Start 2P", sans-serif;
+    --font-inter : "Inter", sans-serif;
 
     --fw-normal : 400;
     --fw-bold : 700;
@@ -18,11 +21,11 @@
     --font-line-s : normal;
     --font-start-s: var(--font-size-s) / var(--font-line-s) var(--font-press-start);
 
-    --font-size-l: 14px;
+    --font-size-l: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
     --font-line-l : normal;
     --font-start-l: var(--font-size-l) / var(--font-line-l) var(--font-press-start);
 
-    --font-size-xl: 49px;
+    --font-size-xl: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);;
     --font-line-xl: normal;
     --font-start-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-press-start);
 
