--- a/styles/animations.css
+++ b/styles/animations.css
@@ -12,3 +12,25 @@
 
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
+
+@keyframes arrow-animation {
+    0% {
+        left : 0;
+    }
+    49% {
+        left : 0;
+    }
+    50% {
+        left : -5px
+    }
+    99% {
+        left : -5px
+    }
+    100% {
+        left : 0;
+    }
+}
+
+@keyframes like-hover {
+
+}
