--- a/styles/style.css
+++ b/styles/style.css
@@ -20,13 +20,10 @@
 */
 
 .page {
-  /* FIX TESTS */
   font-variation-settings : "wght" 465;
-
   position: relative;
   min-inline-size: 320px;
   min-block-size: 100dvb;
-
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -34,30 +31,33 @@
   padding-top: 100px;
   gap: 50px;
   background-color: var(--background);
-}
-
-.background {
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 960px;
   background-size: 4px;
   background-repeat: repeat;
+  background-attachment: fixed;
 }
 
-.theme_dark .background {
+.page, .page.theme_dark {
   background-image: url("../svg/pattern-dark.svg");
 }
 
-.theme_light .background {
+.page.theme_light {
   background-image: url("../svg/pattern-light.svg");
 }
 
 .button {
   background: var(--background);
   border: var(--border);
+}
+
+.button:focus-within {
+  outline: none;
+  box-shadow: 2px 2px 0 0 var(--mainColor);
+}
+
+.button:hover {
+  color: var(--background);
+  box-shadow: inset 130px 0 0 0 var(--mainColor);
+  transition: box-shadow 500ms, color 500ms;
 }
 
 .block-width {
