--- a/styles/variables.css
+++ b/styles/variables.css
@@ -25,7 +25,7 @@
     --font-line-l : normal;
     --font-start-l: var(--font-size-l) / var(--font-line-l) var(--font-press-start);
 
-    --font-size-xl: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);;
+    --font-size-xl: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
     --font-line-xl: normal;
     --font-start-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-press-start);
 
